--- a/a_tunnel/CMakeLists.txt
+++ b/a_tunnel/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  Data.msg
+  raw_sensor_8_10.msg
 )
 
 generate_messages(DEPENDENCIES std_msgs)
